examples/test/testpolicy11254.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11254
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key44: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value18
          key3: value34
      podSelector:
        matchLabels:
          key45: value37
          key18: value15
